fairchive-webapp/src/main/webapp/resources/vecler/theme-base.scss
/* ... */
a,
.pagination > li > a,
.ui-widget-content a,
.ui-tabs .ui-tabs-nav.ui-widget-header li a {
	@include link-color;
}

.ui-widget {
	font-family: $font-main;
}
body .ui-widget {
	font-size: 1em;
}

.ui-inputfield {
	border-color: $gray-border-color;
}

.dropdown-menu {
	max-width: calc(100vw - 20px);
	font-size: 0.933em;
	border-color: $gray-border-color;

	& > li > a, & > li > form > a, & > form > a {
		&:focus, &:hover {
			background: $gray-border-color;
		}
	}

	& > form {
		display: list-item;
		width: 100%;
	}
}
.open > form > .dropdown-menu {
    display: block; /* allows for dropdown-menu to be directly in form tag */
}

/*
This fixes pull-right offscreen menus - might be neeeded in the future

@media screen and (max-width: $screen-xs-max) {
	.dropdown-menu.pull-right {
		left: 0;
		right: auto;
	}
}
*/

#navbarFixed .dropdown-menu > li > form.navbar-form-link {
	display: list-item;
	width: 100%;

	a.ui-commandlink {
		display: block;
		padding: 3px 20px;
		clear: both;
		font-weight: 400;
		color: #333;
		white-space: nowrap;

		&:focus, &:hover {
			background: $gray-border-color;
		}
	}
}

#breadcrumbNavBlock .breadcrumbActive {
	color: $main-text-color;
}

.checkbox, .radio, #resultsCountPaginatorBlock {
	label {
		position: relative;
		top: 0.133em;
		padding-left: 30px;
		line-height: 27px;
		display: inline;

		input {
			&[type=checkbox], &[type=radio] {
				margin-left: -30px;
			}
		}
	}
}

span.glyphicon-question-sign.tooltip-icon {
	margin-left: 0.3em;
	top: 0.15em;

	&::before {
		color: #9cd7f0;
	}
}
.glyphicon.glyphicon-asterisk.text-danger::before {
	content: "*";
	font-family: $font-main;
	font-size: 1em;
	color: #de8800;
}
div.form-group .glyphicon.glyphicon-asterisk {
	font-size: 1em;
}

.section-title {
    display: inline-block;
    max-width: 100%;
    margin-bottom: 5px;
    font-weight: 700;
}

.ui-widget-content .ui-selectonemenu.ui-state-default {
	background: $gray-border-color;
}
.facet-category-default {
	width: 100%;
}

*, .ui-widget-content  {
	button, span {
		&.ui-button.ui-state-default{
			@include btn-access;
		}
	}
}

.ui-button.ui-state-default, .ui-widget-content button.ui-button.ui-state-default {
	&[id*="Cancel"], &[id*="cancel"], &.button-cancel {
		border: none;
		box-shadow: none;
	}
}

.jqplot-target {
	background: #fff;
}

/* WCAG 2.4.7 focus outline */

*:focus, a:focus {
	outline: 2px dashed $focus-color !important;
	outline-offset: 3px;
}
.ui-selectonemenu.ui-state-focus {
	&, & .ui-selectonemenu-trigger {
		outline: 2px dashed $focus-color !important;
	}
}
.ui-selectcheckboxmenu.ui-state-focus {
	&, & .ui-selectcheckboxmenu-trigger {
		outline: 2px dashed $focus-color !important;
	}
}

#sharrre-block a {
	&:focus {
		outline-offset: 5px;
	}
}

.button-block a,
.dropdown-menu a,
.ui-selectonemenu, .ui-selectcheckboxmenu {
	&.ui-state-focus:focus {
		outline-offset: 0;
	}
}

#accessibility-controls button,
.panel-heading {
	&:focus {
		outline-offset: 0;
	}
}

button,
a.btn,
.owl-item a,
input,
.navbar-brand,
#topNavBar a,
a.impaired-navigation,
#datasetButtonBar a,
textarea,
.ui-picklist-list,
.ui-tabs-header,
.ui-sortable-column,
.select-scroll-block,
ul.pagination a,
.ui-paginator a[class*=ui-paginator] {
	&:focus {
		outline-offset: -2px;
	}
}

a[tabindex="-1"] {
	&:focus {
		outline: none !important;
	}
}

/* Remove default focus from inputs */
.ui-inputfield.ui-state-focus, .ui-widget-content .ui-inputfield.ui-state-focus, .form-control:focus {
	box-shadow: none;
	border-color: $gray-border-color;
}

/* Custom bootstrap columns */

@media screen and (min-width: $screen-md) {
	.col-md-24-3 {
		width: 12.5%;
	}
	.col-md-24-21 {
		width: 87.5%;
	}
}

/* Non-breakable links */

a[id$=advsearchlink] {
	display: inline-block;
}

/* Geo map */

.geo-map {
	max-height: calc(100vh - 160px);
}

.form-col-container .geo-map {
    margin-top: .5em;
}

@media screen and (max-width: $screen-xs-max) {
	.geo-map {
		max-width: calc((100vw - 90px) * 0.75);
		height: calc((100vw - 90px) * 0.75);
	}
}

@media screen and (min-width: $screen-sm-min) {
	.geo-map {
		max-width: 364px;
		height: 364px;
	}
}

@media screen and (min-width: $screen-md-min) {
	.geo-map {
		max-width: 487px;
		height: 487px;
	}
}

@media screen and (min-width: $screen-lg-min) {
	.geo-map {
		max-width: 600px;
		height: 600px;
	}
}

.leaflet-control-container {
	.leaflet-top, .leaflet-bottom {
		z-index: 929;
	}

}

/* Forms */

legend {
	font-size: 1.4em;
}

input:disabled {
	cursor: not-allowed;
}

// reverting change in primefaces introduced in
// https://github.com/primefaces/primefaces/issues/4926
// scale(0) causes problems with NVDA screen reader.
// It will not read any checkbox labels.
.ui-helper-hidden-accessible {
    input, select {
        -webkit-transform: none;
        -moz-transform: none;
        -ms-transform: none;
        transform: none;
    }
}

.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover {
	background-position: 0;
}

#datasetThumbnail {
	border-radius: 5px;
}

.select-scroll-block {
	max-height: 8em;
}
/* ... */

